update Maggy example notebooks

--- a/notebooks/ml/Maggy/Hopsworks/maggy-ablation-titanic.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/maggy-ablation-titanic.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Maggy Ablation Example -Titanic\"\n",
-    "date: 2021-02-24\n",
+    "title: \"Maggy Tensorflow Ablation example\"\n",
+    "date: 2021-05-03\n",
     "type: technical_note\n",
     "draft: false\n",
     "---"
@@ -14,16 +14,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Maggy Ablation: Feature and Model Ablation for the Titanic Dataset"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Last Updated: 2020/09/04* </br>\n",
+    "*Last Updated: 2020/04/06*\n",
     "*Created: 2019/10/14*\n",
     "\n",
     "In this notebook, we demonstrate Maggy's Ablation API, while using a TensorFlow Keras Sequential model trained on the [Titanic Dataset](https://www.kaggle.com/c/titanic/data). To be able to follow along, make sure you have the Titanic training dataset registered on your Project's Feature Store, as explained [in this example notebook](https://github.com/logicalclocks/hops-examples/blob/master/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb).\n",
@@ -40,7 +42,7 @@
     "\n",
     "We can think that an ablation study is an *experiment* that consists of several *trials*. For example, each model ablation trial involves training a model with one or more of its components (e.g. a layer) removed. Similarly, a feature ablation trial involves training a model using a different set of dataset features, and observing the outcomes.\n",
     "\n",
-    "![ablation-feature-vs-model.png](../../images/ablation-feature-vs-model.png)\n",
+    "![image.png](images/ablation-feature-vs-model.png)\n",
     "\n",
     "The image above shows a sample feature ablation trial (up) and a sample layer ablation trial (down). For example, in the sample layer ablation trial, we remove the last hidden layer from the base model, train the resulting model, and observe its accuracy."
    ]
@@ -91,7 +93,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>9</td><td>application_1599221100834_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1599221100834_0009/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1599221100834_0009_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1586184410703_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1586184410703_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1586184410703_0006_01_000001/maggy_dev__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -110,6 +112,7 @@
    ],
    "source": [
     "from hops import hdfs\n",
+    "from hops import featurestore\n",
     "import maggy"
    ]
   },
@@ -381,7 +384,6 @@
    "outputs": [],
    "source": [
     "def my_custom_model():\n",
-    "    import tensorflow as tf\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
     "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
@@ -441,42 +443,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# launch the experiment\n",
+    "# Create a config for lagom\n",
+    "from maggy.experiment_config import AblationConfig\n",
     "\n",
-    "result = experiment.lagom(train_fn=training_fn, experiment_type='ablation',\n",
-    "                           ablation_study=ablation_study, \n",
-    "                           ablator='loco', \n",
-    "                           name='Titanic-LOCO'\n",
-    "                          )"
+    "config = AblationConfig(name=\"Titanic-LOCO\", ablation_study=ablation_study, ablator=\"loco\", description=\"\", hb_interval=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a92031ec4b40415fb8d6ce0337561f89",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Maggy experiment', max=11.0, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started Maggy Experiment: Titanic-LOCO, application_1586184410703_0006, run 1\n",
+      "\n",
+      "------ LOCO Results ------ \n",
+      "BEST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"['my_dense_four', 'my_dense_two']\"} -- metric 0.7233333587646484\n",
+      "WORST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"Layers prefixed my_dense\"} -- metric 0.3866666555404663\n",
+      "AVERAGE metric -- 0.6309090906923468\n",
+      "Total Job Time 0 hours, 2 minutes, 36 seconds\n",
+      "\n",
+      "Finished Experiment\n"
+     ]
+    }
+   ],
+   "source": [
+    "# launch the experiment\n",
+    "\n",
+    "result = experiment.lagom(train_fn=training_fn, config=config)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "python",
+   "language": "",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 3
+    "version": 2
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
