update Maggy example notebooks ImageNet

--- a/notebooks/ml/Maggy/Hopsworks/ImageNet/ImageNet_to_petastorm.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/ImageNet/ImageNet_to_petastorm.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "title: \"Creating a Petastorm Dataset from ImageNet\"\n",
+    "date: 2021-05-03\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "elect-companion",
    "metadata": {},
    "source": [
-    "# Creating a petastorm Dataset from ImageNette\n",
+    "# Creating a petastorm Dataset from ImageNet\n",
     "\n",
     "## Why petastorm?\n",
     "Petastorm is an open source library for large datasets, suited for high throughput I/O applications. Petastorm uses parquet as a columnar storage format which allows for better compression than e.g. the .csv format and combines fragmented datasets consisting of many files into fewer and larger files. You should use petastorm when your DataLoader needs to read a lot of files and is slowing down your training. One drawback of petastorm datasets is that you loose random access to elements and the dataset's length. In PyTorch Dataset terms, petastorm implements an `IterativeDataset`.\n",
