--- a/notebooks/ml/Maggy/Hopsworks/ImageNet/maggy-ImageNet-training.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/ImageNet/maggy-ImageNet-training.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mounted-sweden",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---\n",
+    "title: \"Maggy distributed training ResNet-50 on ImageNet using PyTorch\"\n",
+    "date: 2021-05-03\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "systematic-weekly",
    "metadata": {},
