--- a/notebooks/ml/Maggy/Hopsworks/ImageNet/maggy-distributed-training.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/ImageNet/maggy-distributed-training.ipynb
@@ -1,12 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Maggy precision training using PyTorch\"\n",
+    "date: 2021-05-03\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Mixed precision training with Maggy\n",
     "From the Pascal line on, NVIDIA GPUs are equipped with so called Tensor Cores. These cores accelerate computations with half precision and can be used to significantly speed up training of neural networks without loss of accuracy. This notebook shows a brief example on how to train an MNIST classifier with mixed precision on Maggy. For more information about mixed precision, see [here](https://pytorch.org/docs/stable/notes/amp_examples.html)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -180,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2-final"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
