fix count(dept) rename

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -153,7 +153,7 @@
     "                    .join(sales_csv, \"store\")\\\n",
     "                    .groupBy(\"store\")\\\n",
     "                    .agg(F.countDistinct(\"dept\"))\\\n",
-    "                    .withColumnRenamed(\"count(DISTINCT dept)\", \"num_depts\")\n",
+    "                    .withColumnRenamed(\"count(dept)\", \"num_depts\")\n",
     "\n",
     "stores_fg = stores_csv\\\n",
     "            .join(stores_depts_count, \"store\")"
