--- a/notebooks/featurestore/hsfs/training/training-data-coalesced.ipynb
+++ b/notebooks/featurestore/hsfs/training/training-data-coalesced.ipynb
@@ -14,9 +14,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>22</td><td>application_1624018572921_0012</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1624018572921_0012/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e02_1624018572921_0012_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n",
+      "Connected. Call `.close()` to terminate connection gracefully."
+     ]
+    }
+   ],
    "source": [
     "import hsfs\n",
     "connection = hsfs.connection()\n",
@@ -32,14 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VersionWarning: No version provided for getting feature group `sales_fg`, defaulting to `1`.\n",
+      "VersionWarning: No version provided for getting feature group `exogenous_fg`, defaulting to `1`."
+     ]
+    }
+   ],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg')\n",
     "exogenous_fg = fs.get_feature_group('exogenous_fg')\n",
     "\n",
-    "df = sales_fg.select_all().join(exogenous_fg.select_all())"
+    "df = sales_fg.select_all().join(exogenous_fg.select_except([\"is_holiday\"]))"
    ]
   },
   {
@@ -51,18 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f879de41790>"
+     ]
+    }
+   ],
    "source": [
+    "sc = fs.get_storage_connector(\"demo_fs_meb10000_Training_Datasets\")\n",
     "td = fs.create_training_dataset(name=\"sales_model_one\",\n",
     "                               description=\"Single CSV file to train the sales model\",\n",
     "                               data_format=\"csv\",\n",
     "                               coalesce=True,\n",
-    "                               version=2)\n",
+    "                               version=2,\n",
+    "                               storage_connector=sc)\n",
     "\n",
     "td.save(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
