Update sklearn examples

--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -76,10 +76,10 @@
     "```python\n",
     "from hops import hdfs\n",
     "# Uploading the traied model to hdfs\n",
-    "hdfs.copy_to_hdfs(\"iris_flower_knn.pkl\", \"Resources/iris_flower\", overwrite=True)\n",
+    "hdfs.copy_to_hdfs(\"iris_knn.pkl\", \"Resources/iris_flower\", overwrite=True)\n",
     "\n",
     "# Downloading the iris flower model to the current working directory\n",
-    "iris_flower_model_hdfs_path = hdfs.project_path() + \"Resources/iris_flower/iris_flower_knn.pkl\"\n",
+    "iris_flower_model_hdfs_path = hdfs.project_path() + \"Resources/iris_flower/iris_knn.pkl\"\n",
     "local_iris_flower_model_path = hdfs.copy_to_local(iris_flower_model_hdfs_path)\n",
     "```\n",
     "\n",
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>7</td><td>application_1623669741824_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1623669741824_0008/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1623669741824_0008_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1623896729676_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1623896729676_0003/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1623896729676_0003_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -324,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f0210bf4190>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f09bc740ad0>"
      ]
     }
    ],
@@ -342,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f02112e79d0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f09bc67b9d0>"
      ]
     }
    ],
@@ -367,17 +367,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   sepal_length  petal_length  label  sepal_width  petal_width\n",
-      "0           5.1           1.4      0          3.5          0.2\n",
-      "1           4.9           1.4      0          3.0          0.2\n",
-      "2           4.7           1.3      0          3.2          0.2\n",
-      "3           4.6           1.5      0          3.1          0.2\n",
-      "4           5.0           1.4      0          3.6          0.2\n",
-      "5           5.4           1.7      0          3.9          0.4\n",
-      "6           4.6           1.4      0          3.4          0.3\n",
-      "7           5.0           1.5      0          3.4          0.2\n",
-      "8           4.4           1.4      0          2.9          0.2\n",
-      "9           4.9           1.5      0          3.1          0.1"
+      "   sepal_length  sepal_width  petal_width  petal_length  label\n",
+      "0           5.1          3.5          0.2           1.4      0\n",
+      "1           4.9          3.0          0.2           1.4      0\n",
+      "2           4.7          3.2          0.2           1.3      0\n",
+      "3           4.6          3.1          0.2           1.5      0\n",
+      "4           5.0          3.6          0.2           1.4      0\n",
+      "5           5.4          3.9          0.4           1.7      0\n",
+      "6           4.6          3.4          0.3           1.4      0\n",
+      "7           5.0          3.4          0.2           1.5      0\n",
+      "8           4.4          2.9          0.2           1.4      0\n",
+      "9           4.9          3.1          0.1           1.5      0"
      ]
     }
    ],
@@ -396,15 +396,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       sepal_length  petal_length       label  sepal_width  petal_width\n",
-      "count    150.000000    150.000000  150.000000   150.000000   150.000000\n",
-      "mean       5.843333      3.758000    1.000000     3.057333     1.199333\n",
-      "std        0.828066      1.765298    0.819232     0.435866     0.762238\n",
-      "min        4.300000      1.000000    0.000000     2.000000     0.100000\n",
-      "25%        5.100000      1.600000    0.000000     2.800000     0.300000\n",
-      "50%        5.800000      4.350000    1.000000     3.000000     1.300000\n",
-      "75%        6.400000      5.100000    2.000000     3.300000     1.800000\n",
-      "max        7.900000      6.900000    2.000000     4.400000     2.500000"
+      "       sepal_length  sepal_width  petal_width  petal_length       label\n",
+      "count    150.000000   150.000000   150.000000    150.000000  150.000000\n",
+      "mean       5.843333     3.057333     1.199333      3.758000    1.000000\n",
+      "std        0.828066     0.435866     0.762238      1.765298    0.819232\n",
+      "min        4.300000     2.000000     0.100000      1.000000    0.000000\n",
+      "25%        5.100000     2.800000     0.300000      1.600000    0.000000\n",
+      "50%        5.800000     3.000000     1.300000      4.350000    1.000000\n",
+      "75%        6.400000     3.300000     1.800000      5.100000    2.000000\n",
+      "max        7.900000     4.400000     2.500000      6.900000    2.000000"
      ]
     }
    ],
@@ -438,7 +438,7 @@
    "outputs": [],
    "source": [
     "IRIS_FLOWER_RESOURCES_PATH = \"/Resources/iris_flower\"\n",
-    "IRIS_FLOWER_MODEL_PKL = \"iris_flower_knn.pkl\""
+    "IRIS_FLOWER_MODEL_PKL = \"iris_knn.pkl\""
    ]
   },
   {
@@ -486,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started copying local path iris_flower_knn.pkl to hdfs path hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000//Resources/iris_flower/iris_flower_knn.pkl\n",
+      "Started copying local path iris_knn.pkl to hdfs path hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000//Resources/iris_flower/iris_knn.pkl\n",
       "\n",
       "Finished copying"
      ]
@@ -558,6 +558,7 @@
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_knn.pkl\n",
+      "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_knn.pkl\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/program.ipynb"
      ]
     }
@@ -584,11 +585,11 @@
     "\n",
     "    def __init__(self):\n",
     "        \"\"\" Initializes the serving state, reads a trained model from HDFS\"\"\"\n",
-    "        self.model_path = \"Models/irisflowerclassifier/1/iris_flower_knn.pkl\"\n",
+    "        self.model_path = \"Models/irisflowerclassifier/1/iris_knn.pkl\"\n",
     "        print(\"Copying SKLearn model from HDFS to local directory\")\n",
     "        hdfs.copy_to_local(self.model_path)\n",
     "        print(\"Reading local SkLearn model for serving\")\n",
-    "        self.model = joblib.load(\"./iris_flower_knn.pkl\")\n",
+    "        self.model = joblib.load(\"./iris_knn.pkl\")\n",
     "        print(\"Initialization Complete\")\n",
     "\n",
     "\n",
@@ -694,8 +695,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "irisflowerclassifier\n",
-      "mnist"
+      "irisflowerclassifier"
      ]
     }
    ],
@@ -729,7 +729,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info: \tid: 10,\n",
+      "Info: \tid: 788,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
       "        artifact_version: 0,\n",
@@ -770,7 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: 10, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: 0, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-06-15T13:33:20Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f0210bbdf10>"
+      "id: 788, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: 0, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-07-07T09:38:40Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f09bc740710>"
      ]
     }
    ],
@@ -869,31 +869,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [0]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [1]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [0]}\n",
-      "{'predictions': [1]}\n",
       "{'predictions': [1]}\n",
       "{'predictions': [2]}"
      ]
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,30 +984,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623764115253,\n",
-      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 0, prediction_label:Setosa\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623764115463,\n",
-      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 2, prediction_label:Virginica\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623764115662,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784109,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 1, prediction_label:Versicolor\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623764115828,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784277,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623764115993,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784416,\n",
+      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 1, prediction_label:Versicolor\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784596,\n",
+      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 1, prediction_label:Versicolor\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784732,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica"
      ]
