--- a/notebooks/ml/serving/docker_and_kubernetes/sklearn/model_serving_sklearn.ipynb
+++ b/notebooks/ml/serving/docker_and_kubernetes/sklearn/model_serving_sklearn.ipynb
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info: \tid: 14,\n",
+      "Info: \tid: 789,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
       "        artifact_version: 0,\n",
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: 14, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: 0, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-06-15T13:55:15Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7fca6c027e50>\n"
+      "id: 789, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: 0, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-07-07T09:44:24Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f5a10ff13d0>\n"
      ]
     }
    ],
@@ -401,23 +401,23 @@
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
+      "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [1]}\n",
+      "{'predictions': [0]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [0]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [0]}\n",
+      "{'predictions': [1]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n"
+      "{'predictions': [2]}\n",
+      "{'predictions': [1]}\n"
      ]
     }
    ],
@@ -509,25 +509,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623765347698,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625651538595,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623765347848,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625651538772,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623765347971,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625651538928,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623765348218,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625651539069,\n",
+      "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 2\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1625651539230,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 1\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1623765348371,\n",
-      "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 2\n",
       "\n"
      ]
     }
@@ -564,13 +564,6 @@
     "    else:\n",
     "        print(\"timeout.. no more messages to read from topic\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
