get batch serving vector examples

--- a/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
+++ b/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
@@ -28,7 +28,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1614033055547_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1614033055547_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_1614033055547_0006_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1627409512756_0004</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1627409512756_0004/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1627409512756_0004_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -41,7 +41,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n",
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import functions as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Connected. Call `.close()` to terminate connection gracefully."
      ]
     }
@@ -64,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f5f0492ab50>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "store_fg = fs.get_feature_group(name=\"store_fg\", version=1).read()\n",
     "store_fg_meta = fs.create_feature_group(name=\"store_fg\",\n",
@@ -105,19 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f5f04926490>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "exogenous_fg = fs.get_feature_group(name=\"exogenous_fg\", version=1).read()\n",
+    "# spark date type columns are not supported as primary keys in online featurestore\n",
+    "exogenous_fg = exogenous_fg.withColumn(\"date\", F.date_format(\"date\", \"yyyy-MM-dd\"))      \n",
     "exogenous_fg_meta = fs.create_feature_group(name=\"exogenous_fg\",\n",
     "                                            version=2,\n",
     "                                            primary_key=['store', 'date'],\n",
@@ -136,17 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f5f04930150>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_fg_meta = fs.get_feature_group(name=\"sales_fg\", version=3)\n",
     "store_fg_meta = fs.get_feature_group(name=\"store_fg\", version=2)\n",
@@ -178,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,18 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 0.0, 0.0, 0.0, 0.0, 86.0, 0.0, 0.0, 0.0, 76, 203750, 2.572]\n",
-      "[2136989.4600000004, 178982.89, 178982.89, 178982.89, 2136989.4600000004, 182142.89, 178982.89, 2136989.4600000004, 2136989.4600000004, 78, 202307, 2.548]\n",
-      "[8570247.079999998, 119627.54000000001, 119627.54000000001, 119627.54000000001, 8570247.079999998, 21309.54, 119627.54000000001, 8570247.079999998, 8570247.079999998, 78, 203742, 2.777]\n",
-      "[15824390.549999991, 31183.239999999998, 15091.66, 31183.239999999998, 15824390.549999991, 3801.43, 31183.239999999998, 7525350.19, 15824390.549999991, 78, 205863, 2.74]\n",
-      "[12237331.150000002, 30995.239999999998, 7391.76, 30995.239999999998, 13337377.520000005, 1764.75, 27481.239999999998, 3947290.049999999, 13337377.520000005, 75, 112238, 3.127]"
+      "[86.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 76, 203750, 2.572]\n",
+      "[182142.89, 2136989.4600000004, 2136989.4600000004, 178982.89, 178982.89, 178982.89, 178982.89, 2136989.4600000004, 2136989.4600000004, 78, 202307, 2.548]\n",
+      "[21309.54, 8570247.079999998, 8570247.079999998, 119627.54000000001, 119627.54000000001, 119627.54000000001, 119627.54000000001, 8570247.079999998, 8570247.079999998, 78, 203742, 2.777]\n",
+      "[3801.43, 7525350.19, 15824390.549999991, 31183.239999999998, 15091.66, 31183.239999999998, 31183.239999999998, 15824390.549999991, 15824390.549999991, 78, 205863, 2.74]\n",
+      "[1764.75, 3947290.049999999, 12237331.150000002, 30995.239999999998, 7391.76, 27481.239999999998, 30995.239999999998, 13337377.520000005, 13337377.520000005, 75, 112238, 3.127]"
      ]
     }
    ],
@@ -256,10 +250,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The same as above but with batch lookup\n",
+    "\n",
+    "# set varaibles back to defaults as we have already initialised them above for single feature vectors\n",
+    "td_meta = fs.get_training_dataset(\"sales_model\", 8)\n",
+    "td_meta.serving_batch_size = None\n",
+    "td_meta.prepared_statement_connection = None\n",
+    "td_meta.prepared_statements = None\n",
+    "td_meta.serving_keys = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incoming_data = [([31,2,20,4],[\"2010-02-05\",\"2010-02-12\",\"2010-03-05\",\"2010-04-02\"],[47,92,11,52])]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in incoming_data:\n",
+    "    serving_vectors = td_meta.get_serving_vectors({'store': i[0],'date': i[1], 'dept': i[2]})\n",
+    "    print (serving_vectors)"
+   ]
   }
  ],
  "metadata": {
