add exactUniqueness parameter to example notebooks

--- a/notebooks/featurestore/databricks/FeatureStoreQuickStartDatabricksAWS.ipynb
+++ b/notebooks/featurestore/databricks/FeatureStoreQuickStartDatabricksAWS.ipynb
@@ -625,7 +625,7 @@
     "                       primary_key=['area_id'],\n",
     "                       online_enabled=False,\n",
     "                       time_travel_format=None,\n",
-    "                       statistics_config={\"histograms\": True, \"correlations\": True})\n",
+    "                       statistics_config={\"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
     "\n",
     "house_sale_fg.save(houses_for_sale_features_df)"
    ]
@@ -649,7 +649,7 @@
     "                       primary_key=['area_id'],\n",
     "                       online_enabled=False,\n",
     "                       time_travel_format=None,\n",
-    "                       statistics_config={\"histograms\": True, \"correlations\": True})\n",
+    "                       statistics_config={\"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
     "\n",
     "house_sold_fg.save(houses_sold_features_df)"
    ]
@@ -737,7 +737,7 @@
     "                           data_format=\"csv\",\n",
     "                           label=['avg_sold_for'],\n",
     "                           storage_connector=s3_bucket,\n",
-    "                           statistics_config={\"histograms\": True, \"correlations\": True})\n",
+    "                           statistics_config={\"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
     "\n",
     "# Save the training dataset\n",
     "td.save(feature_query)"
