--- a/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
+++ b/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
@@ -221,7 +221,7 @@
     "                                       version=1,\n",
     "                                       description=\"titanic training dataset with clean features\",\n",
     "                                       time_travel_format=None,\n",
-    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
+    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
     "titantic_fg.save(clean_train_df)"
    ]
   },
