--- a/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
+++ b/notebooks/featurestore/hsfs/serving/feature_vector_model_serving.ipynb
@@ -99,7 +99,7 @@
     "                                       online_enabled=True,\n",
     "                                       description=\"Store related features\",\n",
     "                                       time_travel_format=None,\n",
-    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
+    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
     "store_fg_meta.save(store_fg)"
    ]
   },
