Training Dataset examples setting incorrect spark option 'hearder'

--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -158,7 +158,7 @@
     "                               data_format=\"csv\",\n",
     "                               version=2)\n",
     "\n",
-    "td.save(query, {'hearder': 'true'})"
+    "td.save(query, {'header': 'true'})"
    ]
   },
   {
@@ -190,7 +190,7 @@
     "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},\n",
     "                               version=3)\n",
     "\n",
-    "td.save(query, {'hearder': 'true'})"
+    "td.save(query, {'header': 'true'})"
    ]
   },
   {
